<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTerm">

    <EditText
        android:id="@+id/termTitle"
        android:layout_width="329dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/term_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/start_date"
        android:focusableInTouchMode="false"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/termTitle"
        app:layout_constraintTop_toBottomOf="@+id/termTitle" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/end_date"
        android:focusableInTouchMode="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/startDate"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <Switch
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/alert_me"
        app:layout_constraintStart_toStartOf="@+id/endDate"
        app:layout_constraintTop_toBottomOf="@+id/endDate"
        tools:checked="false" />

    <Button
        android:layout_width="181dp"
        android:layout_height="53dp"
        android:layout_marginTop="52dp"
        android:text="@string/save_term"
        android:id="@+id/add_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert" />
</androidx.constraintlayout.widget.ConstraintLayout>