<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_rounded_corner" >

    <TextView
        android:id="@+id/recycler_term_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="28dp"
        android:text="Term Title"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recycler_term_course_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="Course Count"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toEndOf="@+id/recycler_term_title"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_term_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/coursePlanned"
            android:orientation="vertical"
            android:theme="@style/terms_recycler_status">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planned" />

            <TextView
                android:id="@+id/recycler_term_course_planned"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="52"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/courseCompleted"
            android:orientation="vertical"
            android:theme="@style/terms_recycler_status">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed" />

            <TextView
                android:id="@+id/recycler_term_course_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/courseInProgress"
            android:orientation="vertical"
            android:theme="@style/terms_recycler_status">

            <TextView
                android:id="@+id/textview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <TextView
                android:id="@+id/recycler_term_course_in_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/courseDropped"
            android:orientation="vertical"
            android:theme="@style/terms_recycler_status">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dropped" />

            <TextView
                android:id="@+id/recycler_term_course_dropped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/recycler_term_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:theme="@style/terms_recycler_status"
        android:text="@string/start_date"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/recycler_term_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:theme="@style/terms_recycler_status"
        android:text="@string/end_date"
        app:layout_constraintTop_toBottomOf="@+id/recycler_term_start_date"
        tools:layout_editor_absoluteX="-16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>